[package]
name = "raudius"
version = "0.1.0"
authors = ["Alec Savvy <alecjsavvy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = "0.1"
bytes = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.152"
url = "2.1"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["stream", "json"] }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["full"] }
rodio = "0.16.0"

[[example]]
name = "users"
path = "examples/users_api.rs"

[[example]]
name = "playlists"
path = "examples/playlists_api.rs"

[[example]]
name = "tips"
path = "examples/tips_api.rs"

[[example]]
name = "tracks"
path = "examples/tracks_api.rs"

[[example]]
name = "resolve"
path = "examples/resolve_api.rs"

[[example]]
name = "stream"
path = "examples/stream_track.rs"
