[package]
name = "client"
version = "0.1.0"
authors = ["Alec Savvy <alecjsavvy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"

async-trait = "0.1"
bytes = "1.3.0"
thiserror = "1.0"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
mime = { git = "https://github.com/hyperium/mime" }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.16"
tokio-util = { version = "0.7.4", features = ["codec"] }
url = "2.1"
tokio = { version = "1.23.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["stream", "json"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

openapi = { path = "../codegen" }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
rodio = "0.16.0"

[[example]]
name = "users"
path = "examples/users_api.rs"

[[example]]
name = "playlists"
path = "examples/playlists_api.rs"

[[example]]
name = "tips"
path = "examples/tips_api.rs"

[[example]]
name = "tracks"
path = "examples/tracks_api.rs"

[[example]]
name = "resolve"
path = "examples/resolve_api.rs"

[[example]]
name = "stream"
path = "examples/stream_track.rs"
